# potree-converter-docker

./: CMakeLists.txt  Dockerfile
PotreeConverter/include/: ExtraBytes.hpp
PotreeConverter/src/: BINPointReader.cpp
laszip/: CMakeLists.txt
